# icub-learning-trajectories

./: .gitignore  README.md
CppProgram/: CMakeLists.txt  cartesianClient.cpp  cartesianClient.h  recordTrajectoriesWithGeomagic.cpp  recordTrajectoriesWithiCub.cpp  recordTrajectoriesWithiCubBefore.cpp  recordTrajectoriesWithiCubV2.cpp  replayTrajectories.cpp
CppProgram/configFiles/: recordTrajectories.cpp
CppProgram/devFile/: recordTrajectoriesWithiCubV2.cpp
MatlabProgram/: computeBasisForces.m  computeBasisFunction.m  computeDistributions.m  createMovementTest.m  initConnection.m  proMPs_withPhasis.m  recognitionTrajectory.m  recoverTrajectories.m  recoverTrajectories22nov.m  replay.m  replayRecognition.m  replayRecognition22nov.m  visualisation2.m
MatlabProgram/Data/: dataAvant.txt  dataHaut.txt  dataRight.txt
MatlabProgram/dev_files/MatlabProgram_v2_with_Forces/: Drawing.m  FigexBateau.m  README  analysis.m  analysis2.m  analysis3.m  analysis4.m  analysisManyDOF.m  asuppr.m  closeConnection.m  computeBasisCoord.m  computeBasisFunction.m  computeDistributions.m  computeDistributions_withCrossOver.m  createToyExample.m  dataAheadTotal.mat  dataRightTest.mat  dataRightTest.txt  dataRightTotal.mat  dataTopTotal.mat  dataTotal (copy).mat  dataTotal2.mat  drawDistribution.m  drawInferedMovement.m  draw_RecoverData.m  fakeInference.m  inference.m  inferenceFromZero.m  inference_alphaInf.m  inference_alphaInfTotal.m  inference_new.m  inference_withCrossOver.m  initConnection.m  logLikelihood.m  logLikelihoodWithAlpha.m  my_log_mvnpdf.m  proMPS_toolbox.m  proMPs_withPhasis.m  recognitionTrajectory.m  (+17 more)
learningTrajectories/: README  heightpointworld.sdf  world3height.sdf
learningTrajectories/CppProgram/: CMakeLists.txt  cartesianClient.cpp  cartesianClient.h  geomagic.sh  record.txt  replayTrajectories.cpp  test_ReplayManyTrajectoriesWithGoodOrientation.cpp
learningTrajectories/MatlabProgram/: closeConnection.m  computeDistributions.m  my_log_mvnpdf.m  proMPs_withPhasis.m  reco22nov.m  recognitionTrajectory.m  recoverTrajectories.m  replay.m  replayRecognition.m  replayRecognitionNbData.m
(+29 files in other folders)
